<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/scroll_general" />
        <item
            android:id="@+id/nav_iluminacion"
            android:icon="@mipmap/bombilla_redonda"
            android:title="@string/scroll_ilum" />
        <item
            android:id="@+id/nav_tempertura"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/scroll_temp" />
        <item
            android:id="@+id/nav_pers"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scroll_pers" />
        <item
            android:id="@+id/nav_jardin"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scroll_jardin" />
        <item
            android:id="@+id/nav_meteo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scroll_meteo" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scroll_eventos" />
    </group>

    <item android:title="@string/scroll_otros">
        <menu>
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/scroll_tools" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

        </menu>
    </item>

</menu>
