<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="rodrigo.sdm.com.homeinside.ConfiguracionActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/config"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#00516C"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/scroll_tools"/>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="5dp"
                        android:paddingLeft="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login"
                        android:textSize="17dp"
                        android:textColor="#00516C"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginLeft="20dp"
                            android:text="@string/usuario"
                            android:textColor="#00516C"
                            android:layout_weight="1.3"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:id="@+id/user"
                            android:hint="@string/hintUsuario"
                            android:layout_width="match_parent"
                            android:layout_weight="0.7"
                            android:textAlignment="center"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginLeft="20dp"
                            android:text="@string/email"
                            android:textColor="#00516C"
                            android:layout_weight="1.3"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:id="@+id/email"
                            android:hint="@string/hintEmail"
                            android:layout_width="match_parent"
                            android:layout_weight="0.7"
                            android:textAlignment="center"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_gravity="center"
                            android:layout_weight="1.3"
                            android:textColor="#00516C"
                            android:text="@string/password" />
                        <EditText
                            android:id="@+id/pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:textAlignment="center"
                            android:inputType="textPassword"
                            android:fontFamily="sans-serif"
                            android:hint="@string/hintPassword"/>

                    </LinearLayout>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Entrar"
                        android:backgroundTint="#f1e7e7"
                        android:textColor="#00516C"
                        android:onClick="login"
                        android:layout_gravity="right"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardElevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <TextView
                        android:textSize="17dp"
                        android:textColor="#00516C"
                        android:layout_width="match_parent"
                        android:layout_weight="1.3"
                        android:paddingLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ubicacion"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:hint="@string/et_ubicacion"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                app:cardElevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <TextView
                        android:textSize="17dp"
                        android:textColor="#00516C"
                        android:layout_width="match_parent"
                        android:layout_weight="1.3"
                        android:paddingLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/idioma"/>
                    <Spinner
                        android:layout_weight="0.7"
                        android:id="@+id/spinner_idiomas"
                        android:paddingLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/idiomas"
                        android:textAlignment="center">
                    </Spinner>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
</ScrollView>