<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:stretchColumns="*"
    tools:context="rodrigo.sdm.com.homeinside.IluminacionActivity">
    <TableRow
        android:background="@drawable/iluminacion_foto_principal2"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
    </TableRow>

    <TableRow
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#00516C"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/scroll_ilum"/>
    </TableRow>
    <TableRow
        android:layout_marginBottom="15dp">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_habitacion1"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_marginLeft="15dp"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:text="@string/habitacion_salon"/>
                <ImageView
                    android:onClick="onClickBombilla"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:src="@mipmap/bombilla_encendida_redonda"
                    />
            </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_habitacion2"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:textColor="#00516C"
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/habitacion_cocina"/>
            <ImageView
                android:onClick="onClickBombilla"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@mipmap/bombilla_apagada_redonda"
                />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_habitacion3"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="#00516C"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/habitacion_principal"/>
            <ImageView
                android:onClick="onClickBombilla"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@mipmap/bombilla_encendida_redonda"
                />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_habitacion4"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="#00516C"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/habitacion_bano"/>
            <ImageView
                android:onClick="onClickBombilla"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@mipmap/bombilla_apagada_redonda"
                />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_habitacion5"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="#00516C"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/habitacion_invitados"/>
            <ImageView
                android:onClick="onClickBombilla"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@mipmap/bombilla_apagada_redonda"
                />
        </LinearLayout>
    </TableRow>
</TableLayout>
