<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:weightSum="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/jardin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_jardin"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="#00516C"
            android:textStyle="bold"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            card_view:cardElevation="3dp"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/riego"/>
                <Switch
                    android:id="@+id/switch_riego"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginRight="30dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            card_view:cardElevation="3dp"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/ph"/>
                <TextView
                    android:id="@+id/ph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="7 pH"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_marginRight="30dp"
                    android:gravity="right"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="match_parent"
            card_view:cardElevation="3dp"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/humedad"/>
                <TextView
                    android:id="@+id/humedad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="20%"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_marginRight="30dp"
                    android:gravity="right" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
